fix bug showing book info behind picture showing on shorter images. fixed with opacity of and on when hovered over.

--- a/store/static/store/css/store_main.css
+++ b/store/static/store/css/store_main.css
@@ -155,6 +155,10 @@ a:hover {
     display: block
 }
 
+.product_item:hover > .product-details {
+  opacity: 1;
+}
+
 .product_item .cp_img {
     position: absolute;
     top: 0px;
@@ -172,13 +176,14 @@ a:hover {
 
 .product_item .cp_img img {
     transition: all 0.2s ease-in-out;
-    border-radius: 6px
+    border-radius: 6px;
+    /* min-height: 360px!important; */
 }
 
 .product_item .cp_img .hover {
     display: none;
     text-align: center;
-    margin-top: 10px
+    margin-top: 10px;
 }
 
 .product_item .product_details {
@@ -223,6 +228,14 @@ a:hover {
 
 .product-order-list table tr th:last-child {
     width: 145px
+}
+
+.product_details {
+  opacity: 0;
+}
+
+.product_item:hover .product_details {
+  opacity: 1;
 }
 
 @-webkit-keyframes opacity {
